# sma

./: README.md
back/: main.py  pyproject.toml
back/src/ai/: check.py  generate.py  solution.py
front/: pnpm-lock.yaml
